completed ttl task and improved dto
