# internal/model/user.go
@@ -4,11 +4,3 @@ type User struct {
 	Id       int64  `json:"id"`
 	Username string `json:"username"`
 }
-
-type CreateUserDTO struct {
-	Username string `json:"username"`
-}
-
-type CreateUserResponse struct {
-	Id int64 `json:"id"`
-}
